fixed article scrollbart styling so it's limited to the article content window

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -25,7 +25,7 @@
 	font-weight: 200;
 }
 @thick-left-border: 6px;
-@scrollbar-width: 1rem;
+@scrollbar-width: 2rem;
 @border-small-screen: 1px;
 @border-large-screen: 2px;
 
@@ -91,4 +91,3 @@
 @breakpoint-small:			900px;
 @breakpoint-large:			1200px;
 @breakpoint-huge:			1900px;
-
